--- a/Service.html
+++ b/Service.html
@@ -32,7 +32,7 @@
       </div>
       <footer>
         <p>
-          <a href="code.html"><i class="fa-solid fa-house fa-beat" style="color: #f78222;"></i></a>
+          <a href="index.html"><i class="fa-solid fa-house fa-beat" style="color: #f78222;"></i></a>
           <a href="signin.html" class="btn"><i class="fa-solid fa-user fa-beat" style="color: #f78222;"></i></a></p>
       </footer>
     </section>
